cabal-version: 2.2
name:          hlint-hls-plugin
version:       0.1.0.0
synopsis:      Hlint integration plugin with Haskell Language Server
description:   Please see README.md
license:       Apache-2.0
license-file:  LICENSE
author:        Many,TBD when we release
maintainer:    alan.zimm@gmail.com (for now)
copyright:     Alan Zimmerman
category:      Web
build-type:    Simple

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

flag ghc-lib
  default:     False
  manual:      True
  description:
    Force dependency on ghc-lib-parser even if GHC API in the ghc package is supported

library
  exposed-modules:  Ide.Plugin.Hlint
  hs-source-dirs:   src
  build-depends:
    , aeson
    , apply-refact
    , base
    , binary
    , bytestring
    , containers
    , data-default
    , deepseq
    , Diff
    , directory
    , extra
    , filepath
    , ghcide
    , hashable
    , haskell-lsp
    , hlint                    >=3.0
    , hls-plugin-api
    , hslogger
    , lens
    , regex-tdfa
    , shake
    , temporary
    , text
    , transformers
    , unordered-containers

  if ((!flag(ghc-lib) && impl(ghc >=8.10.1)) && impl(ghc <8.11.0))
    build-depends: ghc ^>=8.10

  else
    build-depends:
      , ghc
      , ghc-lib            ^>=8.10
      , ghc-lib-parser-ex  ^>=8.10

    cpp-options:   -DGHC_LIB
    mixins:
      ghc (GHC as RealGHC, HscTypes as RealGHC.HscTypes, EnumSet as RealGHC.EnumSet)

  ghc-options:      -Wall -Wredundant-constraints -Wno-name-shadowing

  if flag(pedantic)
    ghc-options: -Werror

  default-language: Haskell2010
