cabal-version:      2.4
name:               hls-alternate-number-format-plugin
version:            2.2.0.0
synopsis:           Provide Alternate Number Formats plugin for Haskell Language Server
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

license:            Apache-2.0
license-file:       LICENSE
author:             Nick Suchecki
maintainer:         nicksuchecki@gmail.com
category:           Development
build-type:         Simple
extra-source-files:
  LICENSE
  README.md
  test/testdata/*.hs
  test/testdata/*.yaml

source-repository head
    type:     git
    location: https://github.com/haskell/haskell-language-server.git

library
  buildable: True
  exposed-modules:  Ide.Plugin.AlternateNumberFormat, Ide.Plugin.Conversion
  other-modules:    Ide.Plugin.Literals
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      aeson
    , base                 >=4.12 && < 5
    , containers
    , extra
    , ghcide               == 2.2.0.0
    , ghc-boot-th
    , hls-graph
    , hls-plugin-api       == 2.2.0.0
    , hie-compat
    , lens
    , lsp                  ^>=2.2.0.0
    , mtl
    , regex-tdfa
    , syb
    , text
    , unordered-containers

  default-language: Haskell2010
  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

test-suite tests
  buildable: True
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  other-modules: Properties.Conversion
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
    , base                 >=4.12 && < 5
    , filepath
    , hls-alternate-number-format-plugin
    , hls-test-utils       == 2.2.0.0
    , lsp
    , QuickCheck
    , regex-tdfa
    , tasty-quickcheck
    , text

  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
