cabal-version: 2.2
name:          hls-brittany-plugin
version:       1.0.0.0
synopsis:      Integration with the Brittany code formatter
license:       Apache-2.0
license-file:  LICENSE
author:        The Haskell IDE Team
copyright:     The Haskell IDE Team
maintainer:    alan.zimm@gmail.com
category:      Development
build-type:    Simple
extra-source-files:
  LICENSE

library
  exposed-modules:  Ide.Plugin.Brittany
  hs-source-dirs:   src
  build-depends:    base
               ,    brittany      >= 0.13.1.0
               ,    filepath
               ,    ghc
               ,    ghc-boot-th
               ,    ghcide
               ,    lsp-types
               ,    hls-plugin-api
               ,    lens
               ,    text
               ,    transformers

  default-language: Haskell2010
