cabal-version: 2.2
name:          hls-brittany-plugin
version:       1.0.0.0
synopsis:      Integration with the Brittany code formatter
license:       Apache-2.0
license-file:  LICENSE
author:        The Haskell IDE Team
copyright:     The Haskell IDE Team
maintainer:    alan.zimm@gmail.com
category:      Development
build-type:    Simple
extra-source-files:
  LICENSE

library
  exposed-modules:  Ide.Plugin.Brittany
  hs-source-dirs:   src
  build-depends:    base
               ,    brittany      >= 0.13.1.0
               ,    filepath
               ,    ghc
               ,    ghc-boot-th
               ,    ghcide           ^>= 1.1.0.0
               ,    lsp-types
               ,    hls-plugin-api   >= 1.0 && < 1.2
               ,    lens
               ,    text
               ,    transformers

  default-language: Haskell2010

executable test-server
  default-language:   Haskell2010
  build-depends:
    , base
    , data-default
    , ghcide
    , hls-brittany-plugin
    , hls-plugin-api
    , shake
  main-is: Server.hs
  hs-source-dirs: test
  ghc-options: -threaded

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  build-tool-depends:
    hls-brittany-plugin:test-server -any,
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , data-default
    , deepseq
    , ghcide                ^>= 1.1.0.0
    , hls-brittany-plugin
    , hspec-expectations
    , megaparsec
    , lens
    , lsp-test
    , tasty
    , tasty-ant-xml           >=1.1.6
    , tasty-hunit
    , tasty-golden
    , tasty-rerun
    , text
