cabal-version:      2.4
name:               hls-brittany-plugin
version:            1.0.2.0
synopsis:           Integration with the Brittany code formatter
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

license:            AGPL-3.0-only
license-file:       LICENSE
author:             The Haskell IDE Team
copyright:          The Haskell IDE Team
maintainer:         alan.zimm@gmail.com
category:           Development
build-type:         Simple
extra-source-files:
  LICENSE
  test/testdata/**/*.hs

library
  exposed-modules:  Ide.Plugin.Brittany
  hs-source-dirs:   src
  build-depends:
    , base            >=4.12     && <5
    -- see https://github.com/lspitzner/brittany/issues/364
    , brittany        >=0.13.1.0 && < 0.14.0.1 || > 0.14.0.1
    , filepath
    , ghc-boot-th
    , ghcide          ^>=1.6
    , hls-plugin-api  ^>=1.3
    , lens
    , lsp-types
    , text
    , transformers
    -- TODO: remove these when GH issue #2005 is resolved
    , extra
    , ghc-exactprint
    , czipwith

  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , filepath
    , hls-brittany-plugin
    , hls-test-utils        ^>=1.2
