cabal-version:      3.0
name:               hls-cabal-plugin
version:            2.0.0.0
synopsis:           Cabal integration plugin with Haskell Language Server
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

homepage:
license:            MIT
license-file:       LICENSE
author:             Fendor
maintainer:         fendor@posteo.de
category:           Development
extra-source-files:
  CHANGELOG.md
  test/testdata/*.cabal
  test/testdata/simple-cabal/A.hs
  test/testdata/simple-cabal/cabal.project
  test/testdata/simple-cabal/hie.yaml
  test/testdata/simple-cabal/simple-cabal.cabal

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Ide.Plugin.Cabal
    Ide.Plugin.Cabal.Diagnostics
    Ide.Plugin.Cabal.LicenseSuggest
    Ide.Plugin.Cabal.Parse

  build-depends:
    , base                  >=4.12     && <5
    , bytestring
    -- Ideally, we only want to support a single Cabal version, supporting
    -- older versions is completely pointless since Cabal is backwards compatible,
    -- the latest Cabal version can parse all versions of the Cabal file format.
    --
    -- However, stack is making this difficult, if we change the version of Cabal,
    -- we essentially need to make sure all other packages in the snapshot have their
    -- Cabal dependency version relaxed.
    -- Most packages have a Hackage revision, but stack won't pick these up (for sensible reasons)
    -- automatically, forcing us to manually update the packages revision id.
    -- This is a lot of work for almost zero benefit, so we just allow more versions here
    -- and we eventually completely drop support for building HLS with stack.
    , Cabal                 ^>=3.2 || ^>=3.4 || ^>=3.6 || ^>= 3.8 || ^>= 3.10
    , deepseq
    , directory
    , extra                 >=1.7.4
    , ghcide                == 2.0.0.0
    , hashable
    , hls-plugin-api        == 2.0.0.0
    , hls-graph             == 2.0.0.0
    , lsp                   ^>=1.6.0.0
    , lsp-types             ^>=1.6.0.0
    , regex-tdfa            ^>=1.3.1
    , stm
    , text
    , unordered-containers  >=0.2.10.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , filepath
    , ghcide
    , hls-cabal-plugin
    , hls-test-utils    == 2.0.0.0
    , lens
    , lsp-types
    , tasty-hunit
    , text
