cabal-version:      3.0
name:               hls-cabal-plugin
version:            2.3.0.0
synopsis:           Cabal integration plugin with Haskell Language Server
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

homepage:
license:            MIT
license-file:       LICENSE
author:             Fendor
maintainer:         fendor@posteo.de
category:           Development
extra-source-files:
  CHANGELOG.md
  test/testdata/*.cabal
  test/testdata/simple-cabal/A.hs
  test/testdata/simple-cabal/cabal.project
  test/testdata/simple-cabal/hie.yaml
  test/testdata/simple-cabal/simple-cabal.cabal

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Ide.Plugin.Cabal
    Ide.Plugin.Cabal.Diagnostics
    Ide.Plugin.Cabal.Completion.Completer.FilePath
    Ide.Plugin.Cabal.Completion.Completer.Module
    Ide.Plugin.Cabal.Completion.Completer.Paths
    Ide.Plugin.Cabal.Completion.Completer.Simple
    Ide.Plugin.Cabal.Completion.Completer.Snippet
    Ide.Plugin.Cabal.Completion.Completer.Types
    Ide.Plugin.Cabal.Completion.Completions
    Ide.Plugin.Cabal.Completion.Data
    Ide.Plugin.Cabal.Completion.Types
    Ide.Plugin.Cabal.LicenseSuggest
    Ide.Plugin.Cabal.Parse


  build-depends:
    , base                  >=4.12     && <5
    , bytestring
    , Cabal-syntax          >= 3.7
    , containers
    , deepseq
    , directory
    , filepath
    , extra                 >=1.7.4
    , ghcide                == 2.3.0.0
    , hashable
    , hls-plugin-api        == 2.3.0.0
    , hls-graph             == 2.3.0.0
    , lens
    , lsp                   ^>=2.2
    , lsp-types             ^>=2.0.2
    , regex-tdfa            ^>=1.3.1
    , stm
    , text
    , text-rope
    , transformers
    , unordered-containers  >=0.2.10.0
    , containers
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tests
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Completer
    Context
    Utils
  build-depends:
    , base
    , bytestring
    , Cabal-syntax          >= 3.7
    , directory
    , filepath
    , ghcide
    , hls-cabal-plugin
    , hls-test-utils    == 2.3.0.0
    , lens
    , lsp
    , lsp-types
    , tasty-hunit
    , text
    , text-rope
    , transformers
    , row-types
